# StockAnalysis

./: .gitignore  README.md  pyproject.toml  run_sec_data_fetcher.py  run_sec_financials.py  股票数据分析工具需求说明.md  获取美股财报数据需求.md
.sec_cache/: ticker_cik_mapping.json
sec_data_fetcher/: __init__.py  client.py  config.py  csv_exporter.py  data_extractor.py  main.py  test.py  ticker_mapper.py  time_processor.py
sec_financials/: __init__.py  client.py  config.py  csv_exporter.py  data_extractor.py  main.py  test.py  time_processor.py
stock_analyzer/: __init__.py  __main__.py  analyzer.py  config.py  main.py
tests/: README.md  __init__.py  config.py  test_runner.py
tests/fixtures/goog_2016_2025/: Income_Statement.csv
tests/fixtures/goog_2024_2025/: Cash_Flow.csv  Income_Statement.csv
tests/fixtures/googl_2025_full_year/: Balance_Sheet.csv  Cash_Flow.csv
tests/fixtures/googl_2025_q3/: Balance_Sheet.csv  Income_Statement.csv
tests/fixtures/meta_2024_2025/: Balance_Sheet.csv  Income_Statement.csv
tests/fixtures/meta_2025/: Cash_Flow.csv  Income_Statement.csv
tests/fixtures/sec_data_fetcher/goog_2016_2025/: Balance_Sheet.csv  Cash_Flow.csv
tests/fixtures/sec_data_fetcher/goog_2024_2025/: Balance_Sheet.csv
tests/test_cases/: __init__.py  goog_2016_2025.py  goog_2024_2025.py  googl_2025_full_year.py  meta_2024_2025.py
tests/test_cases/sec_data_fetcher/: __init__.py  googl_2025_q3.py  meta_2025.py
tests/test_cases/stock_analyzer/: __init__.py  aapl_financial_indicators.py  msft_financial_indicators.py
(+8 files in other folders)
