[project]
name = "stock-analysis"
version = "1.0.0"
description = "US Stock Financial Data Analysis Tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
stock_analyzer = "stock_analyzer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_analyzer", "sec_data_fetcher"]

[dependency-groups]
dev = []
